auto-test/tests/chapter_15/invalid_types/bad_arg_type.c
int foo(int **x) {
    return x[0][0];
}

int main(void) {
    int arr[1] = {10};
    return foo(&arr); 
}